syntax = "proto3";
package food.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option go_package = "food/v1;apifoodv1";

message CreateRequest {
  string name = 1;
  int32 type_id = 2;
  int32 intake_status_id = 3;
  int32 feeder_id = 4;
  int32 location_id = 5;
  google.protobuf.StringValue remarks = 6;
}

message CreateResponse {}

message ListRequest {
  google.protobuf.Timestamp start_timestamp = 1;
  google.protobuf.Timestamp end_timestamp = 2;
  google.protobuf.StringValue type = 3;
  google.protobuf.StringValue intake_status = 4;
  google.protobuf.StringValue feeder = 5;
  google.protobuf.StringValue location = 6;
}

message ListResponse {
  message Row {
    int32 id = 1;
    string name = 2;
    string type = 3;
    string intake_status = 4;
    string feeder = 5;
    string location = 6;
    string remarks = 7;
    google.protobuf.Timestamp created_at = 8;
    google.protobuf.Timestamp updated_at = 9;
  }

  repeated Row food = 1;
}

message GetRequest {
  int32 id = 1;
}

message GetResponse {
  int32 id = 1;
  string name = 2;
  string type = 3;
  string intake_status = 4;
  string feeder = 5;
  string location = 6;
  string remarks = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message UpdateRequest {
  google.protobuf.StringValue name = 1;
  google.protobuf.Int32Value type_id = 2;
  google.protobuf.Int32Value intake_status_id = 3;
  google.protobuf.Int32Value feeder_id = 4;
  google.protobuf.Int32Value location_id = 5;
  google.protobuf.StringValue remarks = 6;
  int32 id = 7;
}

message UpdateResponse {}

message DeleteRequest {
  int32 id = 1;
}

message DeleteResponse {}

service FoodService {
  rpc Create(CreateRequest) returns (CreateResponse) {}
  rpc List(ListRequest) returns (ListResponse) {}
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc Update(UpdateRequest) returns (UpdateResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}
